fix: avoid overflow of tabs

--- a/src/components/viz-pane/index.css
+++ b/src/components/viz-pane/index.css
@@ -47,7 +47,6 @@
 }
 
 .tabs-nav {
-  height: 100%;
   list-style: none;
   padding: 0;
   margin: 0;
